# lecture-RL

./: .gitignore  benchmark.py  generate_scenarios.py  generate_synthetic_data.py  import_lectures.py  lecture_search_tools.py  lectures.db  load_scenarios.py  local_lecture_db.py  main.py  project_types.py  pyproject.toml  run_agent.py  run_training.py  scenarios.db  setup_scenarios_db.py  test_imports.py  train.py  view_scenarios.py
.litellm_cache/: cache.db
